--- a/scripts/system/create/entityList/html/entityList.html
+++ b/scripts/system/create/entityList/html/entityList.html
@@ -38,6 +38,7 @@
             </div>
             <button id="toggle-space-mode" class="hifi-edit-button space-mode-local">Local</button>
             <input type="button" class="vglyph" id="hmdmultiselect" value="I" style="display: none;" />
+            <input type="button" class="darkblue vglyph" id="help" value="E" />
             <input type="button" class="red glyph" id="delete" value="{" />
         </div>
         <div id="entity-list">
